Salesforce/main/default/objects/CRM_Bonificacion__c/fields/BR_Catergoria_BRXM__c.field-meta.xml
<CustomField>
    <fullName>BR_Catergoria_BRXM__c</fullName>
    <description>Porcentaje que corresponde según Categoria</description>
    <inlineHelpText>Porcentaje que corresponde según Categoria</inlineHelpText>
    <label>Desconto % BRMX</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>