Salesforce/main/default/objects/CRM_Bonificacion__c/fields/BR_Desconto_CRM__c.field-meta.xml
<CustomField>
    <fullName>BR_Desconto_CRM__c</fullName>
    <label>BDesconto CRM</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>