Salesforce/main/default/objects/CRM_Bonificacion__c/fields/BR_Desconto_total_kgs__c.field-meta.xml
<CustomField>
    <fullName>BR_Desconto_total_kgs__c</fullName>
    <description>Desconto total (kgs) del Excel Fórmulas Desconto de Royalty</description>
    <inlineHelpText>Desconto total (kgs) del Excel Fórmulas Desconto de Royalty</inlineHelpText>
    <label>BDesconto total (kgs)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>