Salesforce/main/default/objects/CRM_Bonificacion__c/fields/BR_LXL_Meta__c.field-meta.xml
<CustomField>
    <fullName>BR_LXL_Meta__c</fullName>
    <label>Meta LxL</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>