Salesforce/main/default/objects/CRM_Bonificacion__c/fields/BR_Meta_BRMX_porc__c.field-meta.xml
<CustomField>
    <fullName>BR_Meta_BRMX_porc__c</fullName>
    <label>Meta % BRMX</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>