Salesforce/main/default/objects/CRM_Bonificacion__c/fields/BR_Mix_de_Produto__c.field-meta.xml
<CustomField>
    <fullName>BR_Mix_de_Produto__c</fullName>
    <label>% Produto mais comercializado</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>