Salesforce/main/default/objects/CRM_Bonificacion__c/fields/BR_Palestras_Realizado__c.field-meta.xml
<CustomField>
    <fullName>BR_Palestras_Realizado__c</fullName>
    <label>Realizado Palestra</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>