Salesforce/main/default/objects/CRM_Bonificacion__c/fields/BR_Penetra_o_INTACTA__c.field-meta.xml
<CustomField>
    <fullName>BR_Penetra_o_INTACTA__c</fullName>
    <label>Penetração Tecnologia IPRO BRMX</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>