Salesforce/main/default/objects/CRM_Bonificacion__c/fields/BR_Pontos_LxL__c.field-meta.xml
<CustomField>
    <fullName>BR_Pontos_LxL__c</fullName>
    <description>Pontos (LxL) del excel Fórmulas Desconto de Royalty</description>
    <inlineHelpText>Pontos (LxL) del excel Fórmulas Desconto de Royalty</inlineHelpText>
    <label>Pontos LxL</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>