Salesforce/main/default/objects/CRM_Bonificacion__c/fields/BR_Pontos_mix__c.field-meta.xml
<CustomField>
    <fullName>BR_Pontos_mix__c</fullName>
    <label>Pontos Mix de produtos</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>