Salesforce/main/default/objects/CRM_Bonificacion__c/fields/BR_Pontos_penetra_o__c.field-meta.xml
<CustomField>
    <fullName>BR_Pontos_penetra_o__c</fullName>
    <description>Pontos (penetração) excel Fórmulas Desconto de Royalty</description>
    <inlineHelpText>Pontos (penetração) excel Fórmulas Desconto de Royalty</inlineHelpText>
    <label>Pontos Penetração Tencologia IPRO BRMX</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>