Salesforce/main/default/objects/CRM_Bonificacion__c/fields/BR_Resultado_Palestra_e_Treinamentos__c.field-meta.xml
<CustomField>
    <fullName>BR_Resultado_Palestra_e_Treinamentos__c</fullName>
    <description>Si cumplió con las Palestras y con los Treinamento, suma 3 ptos sino 0</description>
    <inlineHelpText>Si cumplió con las Palestras y con los Treinamento, suma 3 ptos sino 0</inlineHelpText>
    <label>Pontos Palestras e Treinamentos</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>