Salesforce/main/default/objects/CRM_Bonificacion__c/fields/BR_SemComer_Safra_actual__c.field-meta.xml
<CustomField>
    <fullName>BR_SemComer_Safra_actual__c</fullName>
    <description>Suma de semilla comercializada para todas las variedades (Intacta y RR) informadas en el anexo III y IV de la safra actual, de la Empresa Brasmax</description>
    <inlineHelpText>Suma de semilla comercializada para todas las variedades (Intacta y RR) informadas en el anexo III y IV de la safra actual, de la Empresa Brasmax</inlineHelpText>
    <label>Vendas BRMX</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>