Salesforce/main/default/objects/CRM_Bonificacion__c/fields/BRMX_Desconto_Classe_1_AIV__c.field-meta.xml
<CustomField>
    <fullName>BRMX_Desconto_Classe_1_AIV__c</fullName>
    <label>BRMX Desconto Classe 1 AIV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>