Salesforce/main/default/objects/CRM_Bonificacion__c/fields/BRMX_Desconto_Obj_Rel_Gen_Dem__c.field-meta.xml
<CustomField>
    <fullName>BRMX_Desconto_Obj_Rel_Gen_Dem__c</fullName>
    <label>BRMX Desconto Obj Rel/Gen Dem</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>