Salesforce/main/default/objects/CRM_Bonificacion__c/fields/BRMX_Desconto_Uso_Futuro__c.field-meta.xml
<CustomField>
    <fullName>BRMX_Desconto_Uso_Futuro__c</fullName>
    <label>BRMX Desconto Uso Futuro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>