Salesforce/main/default/objects/CRM_Bonificacion__c/fields/CRM_NEOG__c.field-meta.xml
<CustomField>
    <fullName>CRM_NEOG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRM NEOG</label>
    <type>Checkbox</type>
</CustomField>