Salesforce/main/default/objects/CRM_Bonificacion__c/fields/Descuento_aprobado__c.field-meta.xml
<CustomField>
    <fullName>Descuento_aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desconto aprovado</label>
    <type>Checkbox</type>
</CustomField>