Salesforce/main/default/objects/CRM_Bonificacion__c/fields/DS_Aumento_nas_Vendas__c.field-meta.xml
<CustomField>
    <fullName>DS_Aumento_nas_Vendas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True si supero las ventas de semilla comercializada de la campaña anterior</description>
    <inlineHelpText>True si supero las ventas de semilla comercializada de la campaña anterior</inlineHelpText>
    <label>Aumento as Vendas?</label>
    <type>Checkbox</type>
</CustomField>