Salesforce/main/default/objects/CRM_Bonificacion__c/fields/DS_Categoria__c.field-meta.xml
<CustomField>
    <fullName>DS_Categoria__c</fullName>
    <description>Porcentaje que corresponde según Categoria</description>
    <inlineHelpText>Porcentaje que corresponde según Categoria</inlineHelpText>
    <label>Desconto % DSEM</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>