Salesforce/main/default/objects/CRM_Bonificacion__c/fields/DS_Categoria_MKT__c.field-meta.xml
<CustomField>
    <fullName>DS_Categoria_MKT__c</fullName>
    <label>Desconto % DSEM MKT</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>