Salesforce/main/default/objects/CRM_Bonificacion__c/fields/DS_Identifica_o_de_beiras_de_rodovia__c.field-meta.xml
<CustomField>
    <fullName>DS_Identifica_o_de_beiras_de_rodovia__c</fullName>
    <label>Quant de Identificação das Cultivar DSEM</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>