Salesforce/main/default/objects/CRM_Bonificacion__c/fields/DS_Palestras_Meta__c.field-meta.xml
<CustomField>
    <fullName>DS_Palestras_Meta__c</fullName>
    <label>Meta Palestra DSEM</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>