Salesforce/main/default/objects/CRM_Bonificacion__c/fields/DS_Participacao_dia_campo_realizado__c.field-meta.xml
<CustomField>
    <fullName>DS_Participacao_dia_campo_realizado__c</fullName>
    <label>Realizado Dias de Campo DSEM</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>