Salesforce/main/default/objects/CRM_Bonificacion__c/fields/DS_Reclam_de_prec__c.field-meta.xml
<CustomField>
    <fullName>DS_Reclam_de_prec__c</fullName>
    <label>Numero de Reclamaçoes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>