Salesforce/main/default/objects/CRM_Bonificacion__c/fields/DS_Soma_de_Meta__c.field-meta.xml
<CustomField>
    <fullName>DS_Soma_de_Meta__c</fullName>
    <description>Suma de todas las variedades informada en la nueva oportunidad “Objetivo Contrato Royalties” por Multiplicador/marca/safra</description>
    <inlineHelpText>Suma de todas las variedades informada en la nueva oportunidad “Objetivo Contrato Royalties” por Multiplicador/marca/safra</inlineHelpText>
    <label>Meta DSEM</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>