Salesforce/main/default/objects/CRM_Bonificacion__c/fields/DS_Superou_Meta__c.field-meta.xml
<CustomField>
    <fullName>DS_Superou_Meta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Evaluación de : Suma de Semente Comercializada, versus suma de metas, teniendo en cuenta Cultivares de Tecnología Intacta</description>
    <inlineHelpText>Evaluación de : Suma de Semente Comercializada, versus suma de metas, teniendo en cuenta Cultivares de Tecnología Intacta</inlineHelpText>
    <label>Superou 85% DSEM</label>
    <type>Checkbox</type>
</CustomField>