Salesforce/main/default/objects/CRM_Bonificacion__c/fields/Meta_DSEM_porc__c.field-meta.xml
<CustomField>
    <fullName>Meta_DSEM_porc__c</fullName>
    <label>Meta % DSEM</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>