Salesforce/main/default/objects/CRM_Bonificacion__c/fields/NEOG_Descuento__c.field-meta.xml
<CustomField>
    <fullName>NEOG_Descuento__c</fullName>
    <label>NEOG Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>