Salesforce/main/default/objects/CRM_Bonificacion__c/fields/NEOG_Descuento_MKT__c.field-meta.xml
<CustomField>
    <fullName>NEOG_Descuento_MKT__c</fullName>
    <label>NEOG Descuento MKT</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>