Salesforce/main/default/objects/CRM_Bonificacion__c/fields/NEOG_Pontos_Obj_Gen_Dem__c.field-meta.xml
<CustomField>
    <fullName>NEOG_Pontos_Obj_Gen_Dem__c</fullName>
    <label>NEOG Pontos Obj Gen Dem</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>