Salesforce/main/default/objects/CRM_Bonificacion__c/fields/NG_Identifica_o_de_beiras_de_rodovia__c.field-meta.xml
<CustomField>
    <fullName>NG_Identifica_o_de_beiras_de_rodovia__c</fullName>
    <label>Quant de Identificação das Cultivar NEOG</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>