Salesforce/main/default/objects/CRM_Bonificacion__c/fields/NG_Outdoor_Realizado__c.field-meta.xml
<CustomField>
    <fullName>NG_Outdoor_Realizado__c</fullName>
    <label>Realizado Outdoor NEOG</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>