Salesforce/main/default/objects/CRM_Bonificacion__c/fields/NG_Participacao_dia_campo_realizado__c.field-meta.xml
<CustomField>
    <fullName>NG_Participacao_dia_campo_realizado__c</fullName>
    <label>Realizado Dias de Campo NEOG</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>