Salesforce/main/default/objects/CRM_Bonificacion__c/fields/NG_Pontos_volume_superior_MKT__c.field-meta.xml
<CustomField>
    <fullName>NG_Pontos_volume_superior_MKT__c</fullName>
    <label>Pontos Vendas Superior NEOG MKT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>