Salesforce/main/default/objects/CRM_Bonificacion__c/fields/NG_Treinamentos_Realizado__c.field-meta.xml
<CustomField>
    <fullName>NG_Treinamentos_Realizado__c</fullName>
    <label>Realizado Treinamentos NEOG</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>