Salesforce/main/default/objects/CRM_Bonificacion__c/fields/Pontos_CRM_y_Stock_Mult_NEOG__c.field-meta.xml
<CustomField>
    <fullName>Pontos_CRM_y_Stock_Mult_NEOG__c</fullName>
    <label>Pontos CRM y Stock Mult NEOG</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>