Salesforce/main/default/objects/CRM_Bonificacion__c/fields/SSemComer_safra_ant__c.field-meta.xml
<CustomField>
    <fullName>SSemComer_safra_ant__c</fullName>
    <description>Suma de semilla comercializada para todas las variedades (Intacta y RR) informadas en el anexo III y IV de las 2 marcas de la safra anterior</description>
    <inlineHelpText>Suma de semilla comercializada para todas las variedades (Intacta y RR) informadas en el anexo III y IV de las 2 marcas de la safra anterior</inlineHelpText>
    <label>Vendas Totais Safra anterior</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>