Salesforce/main/default/objects/CRM_Bonificacion__c/recordTypes/BRMX.recordType-meta.xml
<RecordType>
    <fullName>BRMX</fullName>
    <active>true</active>
    <label>BRMX</label>
</RecordType>