Salesforce/main/default/objects/CRM_Bonificacion__c/recordTypes/DSEM.recordType-meta.xml
<RecordType>
    <fullName>DSEM</fullName>
    <active>true</active>
    <label>DSEM</label>
</RecordType>