Salesforce/main/default/objects/CRM_Bonificacion__c/recordTypes/NEOG.recordType-meta.xml
<RecordType>
    <fullName>NEOG</fullName>
    <active>true</active>
    <label>NEOG</label>
</RecordType>